--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script crossOrigin="anonymous" src="//unpkg.com/react-scan/dist/auto.global.js"></script>
     <title>Access Table</title>
   </head>
   <body class="overflow-hidden bg-gray-100">
